--- a/bitrise.yml
+++ b/bitrise.yml
@@ -7,8 +7,8 @@ app:
   - A_SECRET_PARAM: $A_SECRET_PARAM
   # If you want to share this step into a StepLib
   - BITRISE_STEP_ID: fastlane-match
-  - BITRISE_STEP_VERSION: "0.0.1"
-  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/platanus/bitrise-step-fastlane-match
+  - BITRISE_STEP_VERSION: "0.0.2"
+  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/platanus/bitrise-step-fastlane-match.git
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
 
 workflows:
