test(): skip tests

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -38,9 +38,12 @@ workflows:
           you can overwrite it if you want to, just like we did below,
           but the step would use the default value specified in the `step.yml`
           file if you would not specify another value.
-        run_if: true
+        run_if: false
         inputs:
-        - example_step_input: Example Step Input's value
+        - git_url: "git@github.com/test/test.git"
+        - app_id: "com.test.app"
+        - type: appstore
+        - decrypt_password: "match_password_test"
     - script:
         inputs:
         - content: |
