feat: support for specifying the git_branch argument of fastlane match

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -41,6 +41,7 @@ workflows:
         run_if: false
         inputs:
         - git_url: "git@github.com/test/test.git"
+        - git_branch: "master"
         - app_id: "com.test.app"
         - type: appstore
         - decrypt_password: "match_password_test"
